# Scene-RAG

./: .gitignore  CLAUDE.md  CLEANUP_FILES.md  CMakeLists.txt  INTELLIGENT_RAG_GUIDE.md  MANIFEST.in  PYTHON_INTERFACE_GUIDE.md  PYTHON_RAG_GUIDE.md  RASTERIZER_CLEANUP.md  README.md  README_PYTHON.md  RENDER_README.md  SCENE_RAG_README.md  TODO_PRODUCTION_READY.md  cleanup_project.sh  cleanup_rasterizer.sh  debug_test.py  example_usage.py  gsplat.hpp  model_render.cpp  model_render.hpp  ply_loader.cpp  ply_loader.hpp  project_gaussians.cpp  pybind_module.cpp  pyproject.toml  python_bindings.cpp  python_bindings.hpp  rasterize_gaussians.cpp  rasterize_gaussians_enhanced.cpp  rasterize_gaussians_enhanced.hpp  render_examples.sh  requirements.txt  setup.py  spherical_harmonics.cpp  test.py
examples/: advanced_rag_demo.py  basic_rendering.py  clip_sam_integration.py  dynamic_database_demo.py  production_usage.py  rag_system_demo.py  test_clip_extractor.py
include/: cam.hpp  cv_utils_render.hpp  gsrender_interface.hpp  model.hpp  model_render.hpp  project_gaussians.hpp  rasterize_gaussians.hpp  scene_rag.hpp
python/: gsrender_rag.py  intelligent_rag.py  requirements_rag.txt
rasterizer/gsplat/: helpers.cuh
src/: cv_utils_render.cpp  gsplat_cpu.cpp  gsrender_interface.cpp  model.cpp  model_render.cpp  opensplat.cpp  opensplat_render.cpp  project_gaussians.cpp  python_bindings.cpp  rasterize_gaussians.cpp  scene_rag.cpp  scene_rag_core.cpp
src/rasterizer/: bindings_render.h  gsplat_render.cpp
src/rasterizer/gsplat-cpu/: bindings.h  gsplat_cpu.cpp
